[package]
name = "folca"
version = "0.1.0"
authors = ["pblkt <pblkt@yadayadayada.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "~0.4"
structopt = "~0.3"
bytefmt = "~0.1"
color-eyre = "~0.5"
simplelog = "~0.10"
log = "~0.4"
ron = "~0.6"
serde = { version = "~1.0", features = ["derive"] }
blake3 = "^0.3"
walkdir = "^2.3"
hex = "^0.4"
dircpy-stable = "^0.3"
flate2 = "^1.0"
tar = "^0.4"
