[package]
name = "folca"
version = "0.2.0"
authors = ["pblkt <pblkt@users-no-reply.github.com>"]
edition = "2018"
description = "A commanad line FOLder CAche"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "~0.4"
structopt = "~0.3"
bytefmt = "~0.1"
color-eyre = "~0.5"
simplelog = "~0.10"
log = "~0.4"
walkdir = "^2.3"
flate2 = "^1.0"
tar = "^0.4"
regex = "^1.5.5"
